﻿===== Hasor-Core v3.1.0 (2017-02-?)
* 改进:
    01.当依赖注入遇到父子类重名字段引发，duplicate异常时候，打印出冲突的字段名。
    02.环境变量名不区分大小写。
    03.AbstractEnvironment，改进“env.config”配置文件的加载改为：先在WORK_HOME下查找，找不到在加载classpath下的。
    04.启动日志中，打印出“env.config”中所加载的所有信息。
    05.原 org.more 包内的工具仅保留使用到的工具类，同时移动到net.hasor.core包中，力争减少 Hasor 产出 jar 包的体积。
    06.classcode 成为 Hasor 的一部分。
    07.增加 debug 模式，debug 模式下会保存 动态代理生成的字节码文件。
* 修复:
    01.fix 当在 jdk8 下使用 hasor aop 功能时出现 VerifyError 错误的问题，3.1.0版本开始不在需要通过 -noverify 参数压制异常。

===== Hasor-Core v3.0.3 (2017-02-07)
* 修复:
    01.Fix ClassEngine 类在判断 @AopIgnore 时，潜在的一个空指针 bug。该问题会导致启动失败。

===== Hasor-Core v3.0.2 (2017-01-30)
* 新增:
    01.新增 ProviderType 接口，用于确定 Provider 接口的返回值类型。
    02.MappingToBuilder 新增 3 个 findBindType 方法用于确定 bindType 类型。
* 修复:
    01.Fix RuntimeFilter入口类，当没有配置 request/ressponse 编码时引发的异常。

===== Hasor-Core v3.0.1 (2017-01-29)
* 修复:
    01.Fix DefaultXmlNode在执行配置替换时，属性没有被替换的问题。
* 改进:
    01.删除了 LogUtils 小工具。

===== Hasor-Core v3.0.0 (2017-01-12)
* 新增:
    01.新增 ApiBinder 扩展机制。开发者可以通过 net.hasor.core.binder.ApiBinderCreater 接口可以自定义 ApiBinder。
    02.WebApiBinder 新增可以设置(请求/响应)编码方法。
    03.通过 ContainerCreater 可以扩展 Hasor 的上帝类了。
    04.新增 @AopIgnore 注解，用于忽略Hasor的Aop动态代理功能。当标记到包上时表示整个包都忽略动态代理。该功能可以有效的防止泛滥的全局Aop。
    05.新增 ApiBinder 接口新增 tryCase 方法用于将 ApiBinder 转换为支持的另外一种接口。
    06.新增 InvokerFilter 接口，该接口功能等同于 Filter。
    07.新增 Invoker 接口取代之前的 RenderData 接口，同时 Invoker 可以像 ApiBinder 一样支持扩展。
    08.新增 MappingSetup 接口，当发现一个控制器时会通过该接口通知给开发者。
    09.新增 WebPlugin 接口，用来扩展过滤器链的开始调用，和调用结束。
* 改进:
    01.受益于 ApiBinder 扩展机制，WebEnvironment、WebAppContext、WebHasor 都不在需要。
    02.Web 框架通过 ApiBinder扩展机制融入 AppContext，不在需要 AppContext 的定制化。
    03.restful 框架和 web 框架。在功能不变的前提下全面融合，代码重构接近90%。
    04.2.4.4版本中添加的 web-fragment 特性不在支持，原因很容易引起重复配置。
* 修复:
    01.Fix HasorUnitRunner 在 JUnit 4.12 版本上 computeTestMethods 方法出现异常的问题。

===== Hasor-Core v2.5.2 (2016-12-01)
* 新增:
    01.新增 MyBatis 插件，该插件会依赖 DBModule。
* 改进:
    01.整理出一个 Provider 实现工具类包。
    02.BindInfoBuilder 接口迁移位置。
